Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1396

CFile index builder overflows stack if an individual value is larger than the block size

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • 0.8.0
    • 0.9.0
    • cfile
    • None

    Description

      Darren Hoo ran into this issue on his workload which involves larger cells: if an individual value in a CFile with a value-index is larger than the index block size, it will infinitely recurse upwards adding levels to the index. Each time it adds a value to an index block, it sees that the block is full, and tries to add the index block to (or create) the level above. Of course that level will also fill up, etc.

      Amusingly, there is a DCHECK for this assertion that has been there since October 2012, but we lacked test coverage around larger cells.

      Attachments

        Activity

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: